Fixed burger menu display on Safari

--- a/client/one/app/ajs-app/widgets/zem-header/zemHeader.component.less
+++ b/client/one/app/ajs-app/widgets/zem-header/zemHeader.component.less
@@ -223,7 +223,7 @@
     margin-top: 10px;
     padding: 0;
     height: auto;
-    min-width: 215px;
+    min-width: 220px;
     max-width: 300px;
     background-color: @header__background-color--right;
     right: 0;
